Prevent height overflow

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
 
 #right_box {
   width  : 80%;
+  max-height: 100%;
   padding: 10px;
 }
 
